--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,3 +2,13 @@
   max-width: 1000px;
   margin: auto;
 }
+
+.loginContainer{
+  width: 200px;
+  margin: 20px auto auto;
+  padding: 20px;
+  overflow: auto;
+  .loginButton{
+    float: right;
+  }
+}
